[package]
name = "steam-time-played"
version = "0.1.1"
authors = ["flauntingspade4 <48335751+flauntingspade4@users.noreply.github.com>","w-henderson <william-henderson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
ureq = { version = "1.3.0", features = ["json"] }