[package]
name = "steam-time-played"
version = "0.1.11"
authors = ["flauntingspade4 <48335751+flauntingspade4@users.noreply.github.com>","w-henderson <william-henderson@outlook.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
ureq = { version = "~1", features = ["json"] }